--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  background-color: #424874;
+}
+h1 {
   text-align: center;
+  margin-top: 20px;
+  color: aliceblue;
+}
+form {
+  width: 80%;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  top: 100px;
+  border-radius: 5px;
+  border: 2px solid #207398;
+  color: #000;
+  box-shadow: 1px 3px 15px rgba(0, 0, 0, 1)  ; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.items {
+  font-weight: 500;
+  position: relative;
+  width: 80%;
+  left: 10%;
+  border-radius: 8px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-group {
+  margin-bottom: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.completedTodo {
+  background-color: darkgray;
+  text-decoration: line-through;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.check-out {
+  cursor: pointer;
 }
