--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ h1 {
   color: aliceblue;
 }
 form {
-  width: 80%;
+  width: 50%;
   margin: auto;
   margin-top: 100px;
   margin-bottom: 100px;
@@ -30,8 +30,8 @@ form {
 .items {
   font-weight: 500;
   position: relative;
-  width: 80%;
-  left: 10%;
+  width: 50%;
+  left: 25%;
   border-radius: 8px;
 }
 
@@ -46,4 +46,14 @@ form {
 
 .check-out {
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  form {
+    width: 90%;
+  }
+  .items {
+    width: 90%;
+    left: 5%;
+  }
 }
